--- a/PreVsPostAnalysis_DayNight_Dec2019.Rmd
+++ b/PreVsPostAnalysis_DayNight_Dec2019.Rmd
@@ -150,8 +150,10 @@ UD.pre <- kernelUD(pre.kd$list.data$all.utm,
                    kern = "bivnorm", 
                    grid = grid)
 
-UD.pre.95 <- get.area.UTM(getverticeshr(UD.pre, 95, unin = "m", unout = "km2"))
-UD.pre.50 <- get.area.UTM(getverticeshr(UD.pre, 50, unin = "m", unout = "km2"))
+UD.pre.95 <- get.area.UTM(getverticeshr(UD.pre, 95, 
+                                        unin = "m", unout = "km2"))
+UD.pre.50 <- get.area.UTM(getverticeshr(UD.pre, 50, 
+                                        unin = "m", unout = "km2"))
     
 # UD.pre.95.latlon <- broom::tidy(spTransform(UD.pre.95, 
 #                                             CRS("+proj=longlat")))
@@ -168,8 +170,10 @@ UD.post <- kernelUD(post.kd$list.data$all.utm,
                     kern = "bivnorm", 
                     grid = grid)
 
-UD.post.95 <- get.area.UTM(getverticeshr(UD.post, 95, unin = "m", unout = "km2"))
-UD.post.50 <- get.area.UTM(getverticeshr(UD.post, 50, unin = "m", unout = "km2"))
+UD.post.95 <- get.area.UTM(getverticeshr(UD.post, 95, 
+                                         unin = "m", unout = "km2"))
+UD.post.50 <- get.area.UTM(getverticeshr(UD.post, 50, 
+                                         unin = "m", unout = "km2"))
     
 # UD.post.95.latlon <- broom::tidy(spTransform(UD.post.95, 
 #                                              CRS("+proj=longlat")))
@@ -191,8 +195,10 @@ UD.pre.day <- kernelUD(pre.day.kd$list.data$all.utm,
                        kern = "bivnorm", 
                        grid = grid)
 
-UD.pre.day.95 <- get.area.UTM(getverticeshr(UD.pre.day, 95, unin = "m", unout = "km2"))
-UD.pre.day.50 <- get.area.UTM(getverticeshr(UD.pre.day, 50, unin = "m", unout = "km2"))
+UD.pre.day.95 <- get.area.UTM(getverticeshr(UD.pre.day, 95, 
+                                            unin = "m", unout = "km2"))
+UD.pre.day.50 <- get.area.UTM(getverticeshr(UD.pre.day, 50, 
+                                            unin = "m", unout = "km2"))
     
 # UD.pre.day.95.latlon <- broom::tidy(spTransform(UD.pre.day.95,
 #                                                 CRS("+proj=longlat")))
@@ -209,8 +215,10 @@ UD.pre.night <- kernelUD(pre.night.kd$list.data$all.utm,
                          kern = "bivnorm", 
                          grid = grid)
 
-UD.pre.night.95 <- get.area.UTM(getverticeshr(UD.pre.night, 95, unin = "m", unout = "km2"))
-UD.pre.night.50 <- get.area.UTM(getverticeshr(UD.pre.night, 50, unin = "m", unout = "km2"))
+UD.pre.night.95 <- get.area.UTM(getverticeshr(UD.pre.night, 95, 
+                                              unin = "m", unout = "km2"))
+UD.pre.night.50 <- get.area.UTM(getverticeshr(UD.pre.night, 50, 
+                                              unin = "m", unout = "km2"))
     
 # UD.pre.night.95.latlon <- broom::tidy(spTransform(UD.pre.night.95,
 #                                                   CRS("+proj=longlat")))
@@ -236,8 +244,10 @@ UD.post.day <- kernelUD(post.day.kd$list.data$all.utm,
                         kern = "bivnorm", 
                         grid = grid)
 
-UD.post.day.95 <- get.area.UTM(getverticeshr(UD.post.day, 95, unin = "m", unout = "km2"))
-UD.post.day.50 <- get.area.UTM(getverticeshr(UD.post.day, 50, unin = "m", unout = "km2"))
+UD.post.day.95 <- get.area.UTM(getverticeshr(UD.post.day, 95, 
+                                             unin = "m", unout = "km2"))
+UD.post.day.50 <- get.area.UTM(getverticeshr(UD.post.day, 50, 
+                                             unin = "m", unout = "km2"))
     
 # UD.post.day.95.latlon <- broom::tidy(spTransform(UD.post.day.95,
 #                                                  CRS("+proj=longlat")))
@@ -254,8 +264,12 @@ UD.post.night <- kernelUD(post.night.kd$list.data$all.utm,
                           kern = "bivnorm", 
                           grid = grid)
 
-UD.post.night.95 <- get.area.UTM(getverticeshr(UD.post.night, 95, unin = "m", unout = "km2"))
-UD.post.night.50 <- get.area.UTM(getverticeshr(UD.post.night, 50, unin = "m", unout = "km2"))
+UD.post.night.95 <- get.area.UTM(getverticeshr(UD.post.night, 
+                                               95, unin = "m", 
+                                               unout = "km2"))
+UD.post.night.50 <- get.area.UTM(getverticeshr(UD.post.night, 50, 
+                                               unin = "m", 
+                                               unout = "km2"))
     
 # UD.post.night.95.latlon <- broom::tidy(spTransform(UD.post.night.95,
 #                                                    CRS("+proj=longlat")))
@@ -288,7 +302,12 @@ save.list <- list(UD.eachID.pre.daynight = UD.eachID.pre.combined,
                   UD.allID.post.day = UD.post.day,
                   UD.allID.post.night = UD.post.night)
 
-saveRDS(save.list, file = "RData/PreVsPost_DayNight_Dec2019.RDS")
+#saveRDS(save.list, file = "RData/PreVsPost_DayNight_Dec2019.RDS")
+
+# Added the complete output of kernelUD to output list of UD.eachID 
+# function in Dec 2021, in order to respond to Mike Zickel's request
+# for HR data. New outputs were saved in the new rds file.
+saveRDS(save.list, file = "RData/PreVsPost_DayNight_Dec2021.rds")
 
 ```
 
